ADD header menu

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <header class="header">
       <div class="container header__container">
         <nav class="header-nav">
-          <a href="./index.html" lang="en" class="header-link-log link header-nav__header-link-log"
+          <a
+            href="./index.html"
+            lang="en"
+            class="header-link-log link header-nav__header-link-log"
             ><span>Web</span>Studio</a
           >
 
@@ -100,79 +103,79 @@
             <svg class="modal-open-svg" width="40" height="40">
               <use href="./images/icons.svg.svg#icon-menu_40px1"></use>
             </svg>
-            <!--
-            <svg
-              class="menu-open-btn"
-              width="30"
-              height="30"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="15" cy="15" r="15" fill="#fff" />
-              <circle
-                cx="15"
-                cy="15"
-                r="14.5"
-                stroke="#000"
-                stroke-opacity=".1"
-              />
-              <path
-                d="M21 10.108 19.892 9 15.5 13.392 11.108 9 10 10.108l4.392 4.392L10 18.892 11.108 20l4.392-4.392L19.892 20 21 18.892 16.608 14.5 21 10.108Z"
-                fill="#000"
-              />
-            </svg>
-            <svg
-              class="menu-open-btn-blue"
-              width="30"
-              height="30"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="15" cy="15" r="15" fill="#fff" />
-              <circle
-                cx="15"
-                cy="15"
-                r="14.5"
-                stroke="#000"
-                stroke-opacity=".1"
-              />
-              <path
-                d="M21 11.108 19.892 10 15.5 14.392 11.108 10 10 11.108l4.392 4.392L10 19.892 11.108 21l4.392-4.392L19.892 21 21 19.892 16.608 15.5 21 11.108Z"
-                fill="#2196F3"
-              />
-            </svg>-->
           </span>
         </button>
       </div>
       <div class="mobile__menu is-hidden" data-menu>
-        <div class="container">
+        <div class="container mobile-menu-box">
+          <button type="button" class="header-menu-close" data-menu-close>
+            <span class="modal-close">
+              <svg class="modal-close-svg" width="40" height="40">
+                <use href="./images/icons.svg.svg#icon-close-menu"></use>
+              </svg>
+            </span>
+          </button>
+          <nav>
+            <ul class="menu-list list">
+              <li class="menu-list__item">
+                <a
+                  href="./index.html"
+                  rel="noopener noreferrer nofollow"
+                  class="menu-list__link link menu-list__link_activ"
+                >
+                  Студія
+                </a>
+              </li>
+              <li class="menu-list__item">
+                <a
+                  href="./portfolio.html"
+                  rel="noopener noreferrer nofollow"
+                  class="menu-list__link link"
+                >
+                  Портфоліо
+                </a>
+              </li>
+              <li class="menu-list__item">
+                <a
+                  href=""
+                  rel="noopener noreferrer nofollow"
+                  class="menu-list__link link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
           <ul class="menu-list list">
             <li class="menu-list__item">
               <a
-                href="./index.html"
-                rel="noopener noreferrer nofollow"
-                class="menu-list__link link menu-list__link_activ"
+                href="tel:+380961111111"
+                class="menu-list__link-communication menu-list-link-tel link"
               >
-                Студія
-              </a>
+                +38 096 111 11 11</a
+              >
             </li>
             <li class="menu-list__item">
               <a
-                href="./portfolio.html"
-                rel="noopener noreferrer nofollow"
-                class="menu-list__link link"
+                href="mailto:info@devstudio.com"
+                class="menu-list__link-communication menu-list-link-mail link"
               >
-                Портфоліо
+                info@devstudio.com
               </a>
             </li>
-            <li class="menu-list__item">
-              <a
-                href=""
-                rel="noopener noreferrer nofollow"
-                class="menu-list__link link"
-              >
-                Контакти
-              </a>
+          </ul>
+          <ul class="menu-soc-list">
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">Instagram</a>
+            </li>
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">Twitter</a>
+            </li>
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">Facebook</a>
+            </li>
+            <li class="menu-soc-item">
+              <a href="" class="menu-soc-link link">LinkedIn</a>
             </li>
           </ul>
         </div>
