correction menu mobile

--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
 
         <button type="button" class="header-menu-open" data-menu-open>
           <!--<svg class="menu-open-icon"-->
-          <span class="modal-open">
-            <svg class="modal-open-svg" width="40" height="40">
-              <use href="./images/icons.svg.svg#icon-menu_40px1"></use>
-            </svg>
-          </span>
+          <!--<span class="modal-open">-->
+          <svg class="modal-open-svg" width="40" height="40">
+            <use href="./images/icons.svg.svg#icon-menu_40px1"></use>
+          </svg>
+          <!--</span>-->
         </button>
       </div>
       <div class="mobile__menu is-hidden" data-menu>
         <div class="container mobile-menu-box">
           <button type="button" class="header-menu-close" data-menu-close>
-            <span class="modal-close">
-              <svg class="modal-close-svg" width="40" height="40">
-                <use href="./images/icons.svg.svg#icon-close-menu"></use>
-              </svg>
-            </span>
+            <!--<span class="modal-close">*/-->
+            <svg class="modal-close-svg" width="40px" height="40px">
+              <use href="./images/icons.svg.svg#icon-close-menu"></use>
+            </svg>
+            <!--</span>-->
           </button>
-          <nav>
+          <nav class="menu-nav">
             <ul class="menu-list list">
               <li class="menu-list__item">
                 <a
