--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
     <main>
       <section class="filter">
         <div class="container">
-          <h2 class="visually-hidden">Меню рабіт</h2>
+          <h2 class="visually-hidden">Меню робіт</h2>
           <ul class="filter__list list">
             <li class="filter__item">
               <button type="button" class="filter__btn btn">Усі</button>
@@ -396,7 +396,7 @@
                 value=""
                 placeholder="E-mail"
                 name="user_email"
-                class="footer-form-input footer-form-label__mr "
+                class="footer-form-input footer-form-label__mr"
               />
             </label>
             <button type="submit" class="footer-btn">
