correction menu mobil

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <!--</span>-->
         </button>
       </div>
-      <div class="mobile__menu is-hidden" data-menu>
+      <div class="mobile-menu is-hidden" data-menu>
         <div class="container mobile-menu-box">
           <button type="button" class="header-menu-close" data-menu-close>
             <!--<span class="modal-close">*/-->
@@ -116,7 +116,7 @@
             <!--</span>-->
           </button>
           <nav class="menu-nav">
-            <ul class="menu-list list">
+            <ul class="menu-list list mobile-menu__menu-list">
               <li class="menu-list__item">
                 <a
                   href="./index.html"
@@ -146,7 +146,7 @@
               </li>
             </ul>
           </nav>
-          <ul class="menu-list list">
+          <ul class="menu-list list mobile-menu__menu-list">
             <li class="menu-list__item">
               <a
                 href="tel:+380961111111"
@@ -164,16 +164,19 @@
               </a>
             </li>
           </ul>
-          <ul class="menu-soc-list">
+          <ul class="menu-soc-list list menu-list__menu-soc-list">
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">Instagram</a>
             </li>
+            <li class="soc-line"></li>
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">Twitter</a>
             </li>
+            <li class="soc-line"></li>
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">Facebook</a>
             </li>
+            <li class="soc-line"></li>
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">LinkedIn</a>
             </li>
