--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               </li>
             </ul>
           </nav>
-          <ul class="menu-list list mobile-menu__menu-list">
+          <ul class="menu-list-com list mobile-menu__menu-list-com">
             <li class="menu-list__item">
               <a
                 href="tel:+380961111111"
@@ -168,15 +168,15 @@
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">Instagram</a>
             </li>
-            <li class="soc-line"></li>
+            <li class="menu-soc-list__soc-line"></li>
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">Twitter</a>
             </li>
-            <li class="soc-line"></li>
+            <li class="menu-soc-list__soc-line"></li>
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">Facebook</a>
             </li>
-            <li class="soc-line"></li>
+            <li class="menu-soc-list__soc-line"></li>
             <li class="menu-soc-item">
               <a href="" class="menu-soc-link link">LinkedIn</a>
             </li>
