Correction menu mobile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
           </li>
         </ul>
 
-        <button type="button" class="header-menu-open" data-menu-open>
+        <button
+          type="button"
+          class="header-menu-open header__menu-open"
+          data-menu-open
+        >
           <!--<svg class="menu-open-icon"-->
           <!--<span class="modal-open">-->
           <svg class="modal-open-svg" width="40" height="40">
@@ -108,10 +112,14 @@
       </div>
       <div class="mobile-menu is-hidden" data-menu>
         <div class="container mobile-menu-box">
-          <button type="button" class="header-menu-close" data-menu-close>
+          <button
+            type="button"
+            class="header-menu-close header__menu-close"
+            data-menu-close
+          >
             <!--<span class="modal-close">*/-->
             <svg class="modal-close-svg" width="40px" height="40px">
-              <use href="./images/icons.svg.svg#icon-close-menu"></use>
+              <use href="./images/icons.svg.svg#icon-close_40px1"></use>
             </svg>
             <!--</span>-->
           </button>
@@ -147,7 +155,7 @@
             </ul>
           </nav>
           <ul class="menu-list-com list mobile-menu__menu-list-com">
-            <li class="menu-list__item">
+            <li class="menu-list__item-com">
               <a
                 href="tel:+380961111111"
                 class="menu-list__link-communication menu-list-link-tel link"
@@ -155,7 +163,7 @@
                 +38 096 111 11 11</a
               >
             </li>
-            <li class="menu-list__item">
+            <li class="menu-list__item-com">
               <a
                 href="mailto:info@devstudio.com"
                 class="menu-list__link-communication menu-list-link-mail link"
