--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
+        <div class="footer-container-left-part-And-centr" >
         <div class="footer__left-part">
           <a
             href="./index.html"
@@ -626,6 +627,7 @@
             </li>
           </ul>
         </div>
+      </div>
         <div class="footer-form">
           <p class="footer-form__title">Підпишиться на розсилку</p>
           <form class="footer-form-box">
@@ -638,7 +640,7 @@
                 class="footer-form-input footer-form-label__mr"
               />
             </label>
-            <button type="submit" class="footer-btn">
+            <button type="submit" class="footer-btn footer-form-box__btn">
               Підписатися
               <span class="footer-icon-send footer-btn__icon">
                 <svg
