--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
-            <li class="clients-item">
+            <li class="clients-8">
               <a href="./index.html" class="clients-link">
                 <svg class="clients-log" width="106" height="60">
                   <use href="./images/icons.svg.svg#icon-logo-yaco"></use>
